@startuml ERD-MongoDB
!theme plain
title Car Rental — MongoDB (kolekcje + referencje cross-DB)

hide circle
skinparam linetype ortho
skinparam roundcorner 6
skinparam shadowing false
skinparam class {
    BackgroundColor #FDFDFD
    BorderColor #555555
    ArrowColor #444444
}

legend top right
    PK = Primary Key (_id)
    ref = referencja logiczna
    do tabeli w PostgreSQL
    (brak FK po stronie Mongo)
endlegend

' ===== Kolekcje Mongo =====

entity "rental_logs" as rental_logs <<collection>> {
    * **_id** : ObjectId <<PK>>
    --
    * rental_id : string <<ref → pg.rentals.id>>
    * reservation_id : string <<ref → pg.reservations.id>>
    * employee_id : string <<ref → pg.users.id>>
    * event : string [pickup | return]
    * timestamp : string (ISO 8601)
    --
    .. event = "pickup" ..
      photo_urls : string[]
      client_signature_url : string
    .. event = "return" ..
      damage_photo_urls : string[]
}

entity "reviews" as reviews <<collection>> {
    * **_id** : string (uuid) <<PK>>
    --
    * user_id : string <<ref → pg.users.id>>
    * vehicle_id : string <<ref → pg.vehicles.id>>
    * rental_id : string <<ref → pg.rentals.id>>
    * rating : int <<1..5>>
      comment : string | null
    * created_at : date
    --
    * author : object (osadzony)
        * id : string
        * first_name : string
        * last_name : string
          avatar_url : string | null
    --
    indeksy:
      uq_reviews_rental_user
        (rental_id, user_id) UNIQUE
      (vehicle_id, created_at desc)
      (user_id)
}

' ===== Encje "cienie" z Postgresa (do pokazania referencji) =====

entity "users (PG)" as pg_users <<external>> #EEE {
    id : uuid
}

entity "rentals (PG)" as pg_rentals <<external>> #EEE {
    id : uuid
}

entity "reservations (PG)" as pg_reservations <<external>> #EEE {
    id : uuid
}

entity "vehicles (PG)" as pg_vehicles <<external>> #EEE {
    id : uuid
}

' ===== Referencje (przerywane = soft ref, brak FK) =====

pg_rentals      ||..o{ rental_logs : "rental_id"
pg_reservations ||..o{ rental_logs : "reservation_id"
pg_users        ||..o{ rental_logs : "employee_id"
pg_vehicles     ||..o{ reviews     : "vehicle_id"
pg_users        ||..o{ reviews     : "user_id"
pg_rentals      ||..o{ reviews     : "rental_id"

note bottom of rental_logs
    Wstawiane przez rental_service.log_pickup()
    i rental_service.log_return().
    Jedna kolekcja na 2 typy zdarzeń —
    rozróżnienie po polu **event**.
end note

note bottom of reviews
    Kolekcja w pełni zarządzana przez aplikację
    (review_repository.py / review_service.py):
      • walidator **JSON Schema** (odpowiednik CHECK)
        wymusza wymagane pola i rating 1..5,
      • **compound unique index** (rental_id, user_id)
        → 1 recenzja na wynajem (DuplicateKeyError → HTTP 409),
      • insert = review_repository.insert,
      • agregacja $avg = review_repository.aggregate_rating
        (orkiestracja w review_service._refresh_vehicle_rating),
        wynik zapisywany do vehicles.avg_rating / ratings_count.
    Kolekcja + indeksy zakładane na starcie
    (review_repository.ensure_collection, scripts/init_mongo.py).
end note

@enduml
